--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-chat-engine": "^1.11.22",
     "react-dom": "^17.0.2",
     "react-new-window": "^0.2.1",
+    "react-rte": "^0.16.5",
     "react-scripts": "5.0.0",
     "use-sound": "^4.0.1"
   },
