--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
+    "emoji-picker-react": "^3.5.1",
+    "html-react-parser": "^1.4.8",
+    "html-to-text": "^8.1.0",
+    "jodit-react": "^1.2.8",
     "react": "^17.0.2",
     "react-chat-engine": "^1.11.22",
     "react-dom": "^17.0.2",
