--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-chat-engine": "^1.11.22",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-loader-spinner": "^6.0.0-0",
     "react-new-window": "^0.2.1",
     "react-rte": "^0.16.5",
     "react-scripts": "5.0.0",
