--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "html-react-parser": "^1.4.8",
     "html-to-text": "^8.1.0",
     "jodit-react": "^1.2.8",
+    "mongodb": "^4.4.1",
     "react": "^17.0.2",
     "react-chat-engine": "^1.11.22",
+    "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-loader-spinner": "^6.0.0-0",
